--- a/_data/2022/jogja/faculty.yml
+++ b/_data/2022/jogja/faculty.yml
@@ -5,5 +5,5 @@
 
 - name: Ahmad R. Pratama
   image: /assets/images/AhmadRPratama.jpg
-  bio: "Ahmad is an Assistant Professor at Universitas Islam Indonesia's Department of Informatics, where he also serves as the Department's Secretary. He earned his Ph.D. in Technology, Policy, and Innovation under the Fulbright scholarship. He enjoys combining traditional research methods with computational and data science approaches in order to bridge the gap between computer science/information technology and the social sciences."
+  bio: "Ahmad is an Assistant Professor at Universitas Islam Indonesia where he also serves as Secretary of the Department of Informatics. He earned his Ph.D. in Technology, Policy, and Innovation with the Fulbright scholarship. He enjoys combining traditional research methods with computational and data science approaches in order to bridge the gap between computer science/information technology and the social sciences."
   website: https://ahmadrafie.github.io/
