--- a/_data/2022/rutgers/schedule.yml
+++ b/_data/2022/rutgers/schedule.yml
@@ -1,3 +1,3 @@
-- date: June 19, 2022
+- date: June 20, 2022
   events:
-    - name: "Schedule coming soon..."
+    - name: "Schedule coming soon. The institute will run on weekdays only."
