--- a/_data/2022/rochester/faculty.yml
+++ b/_data/2022/rochester/faculty.yml
@@ -9,6 +9,6 @@
   website: http://ezgisiir.com/
 
 - name: Bahar Zafer
-  image:
-  bio: "Profile coming soon."
-  website:
+  image: /assets/images/BaharZ.jpeg
+  bio: "Bahar is currently a first-year Ph.D. student at the University of Rochester. Before starting her Ph.D. in Political Science, she worked as a research assistant in an SNF-funded project at the University of Zurich, which analyzes discourse and sentiment around immigration issues applying NLP techniques to text from newspapers. She received her M.A. in Analytical Political Economy at Duke University and B.A. in Economics and Sociology at Boğaziçi University."
+  website: http://www.linkedin.com/in/bahar-zafer-8a8431137/
