Oxford - Update people and apply

--- a/_data/2022/oxford/faculty.yml
+++ b/_data/2022/oxford/faculty.yml
@@ -1,5 +1,5 @@
 - name: Evelina Akimova
-  bio: 
+  bio: Evelina Akimova is a Postdoctoral Researcher in Biosocial Research at the Leverhulme Centre for Demographic Science and a Non-Stipendiary Research Fellow at Nuffield College. Evelina’s main research areas are health inequalities, chronotype, and wellbeing, using methods from computational social science and statistical genetics. Her current research focuses on the use of molecular genetic, survey, and accelerometer data to understand the complex interplay between chronotype and labour market decisions, trajectories, and experiences. She received her DPhil in Sociology at the University of Oxford in 2021 where she investigated the joined role of biological and socio-demographic determinants of depressive symptoms.
   image: /assets/images/eva_akimova.jpg
   website: https://www.sociology.ox.ac.uk/people/evelina-akimova
 
