--- a/_data/2022/singapore/speakers.yml
+++ b/_data/2022/singapore/speakers.yml
@@ -1,1 +1,11 @@
-- name:
+- name: Kokil Jaidka
+  image: /assets/images/jaidka.jpg
+  bio: "Kokil Jaidka is an Assistant Professor in Computational Communication at the National University of Singapore. Her research interests lie in developing computational models of persuasive and argumentative language and building social media platforms that better facilitate constructive conversations. Her research has been published in Nature Human Behaviour, Journal of Computer-Mediated Communication, and Journal of Communication, among other venues."
+  website: https://kokiljaidka.wordpress.com/
+  
+ - name: Hai Liang
+  image: /assets/images/haiLiang.png
+  bio: "Hai Liang is an Assistant Professor in the School of Journalism and Communication at the Chinese University of Hong Kong. He is also a theme co-leader of the Computational Social Science Laboratory at CUHK. His research interests include computational social science, political communication, and public health. Currently, he is working on several interdisciplinary projects at the intersection of computational social science (analytical approach) and social media studies (data source). He has published numerous articles in top journals such as Journal of Communication, Communication Research, Human Communication Research, Journal of Computer-Mediated Communication, New Media & Society, among others."
+  website: http://www.drhailiang.com/
+  
+ - name: More speakers TBC.
