--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -1,3 +1,44 @@
-- date: June 19, 2022
-  events:
-    - name: "Schedule coming soon..."
+- date: All times are in Eastern Daylight Time
+    
+- date: 2022-06-18
+  name: Praxis to Power
+
+- date: 2022-06-19
+  name: Praxis to Power
+  
+- date: 2022-06-20
+  name: Day 1
+  
+- date: 2022-06-21
+  name: Day 2
+  
+- date: 2022-06-22
+  name: Day 3
+
+- date: 2022-06-23
+  name: Day 4
+
+- date: 2022-06-24
+  name: Day 5
+
+- date: 2022-06-25
+  name: Day Off
+  
+- date: 2022-06-26
+  name: Day Off
+
+- date: 2022-06-27
+  name: Day 6
+  
+- date: 2022-06-28
+  name: Day 7
+  
+- date: 2022-06-29
+  name: Day 8
+
+- date: 2022-06-30
+  name: Day 9
+
+- date: 2022-07-01
+  name: Day 10
+  
