--- a/_data/2022/hong-kong/location.yml
+++ b/_data/2022/hong-kong/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/hongkong.jpg
 title: Hong Kong
-subtitle: University of Hong Kong
+subtitle: Virtual Event
 description: "June 19 to June 29, 2022"
 link: hong-kong
 year: 2022
