--- a/_data/2022/paris/faculty.yml
+++ b/_data/2022/paris/faculty.yml
@@ -11,4 +11,4 @@
 - name: Felix Lennert
   image: /assets/images/felix_lennert.JPG
   bio: Felix Lennert is a PhD candidate in Sociology at École Polytechnique under the supervision of Étienne Ollion. He holds an M.Sc. in Computational Social Science from Linköping Universitet. His research interest centers around political polarization and its underlying processes which he studies using large-scale social media data and a diverse set of computational methods.
-  
+  website: https://felix-lennert.netlify.app
