--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -23,6 +23,11 @@
   bio: Glora Genaro is a Postdoctoral Student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
   website: http://gloriagennaro.rbind.io
   
+- name: Lucas Girard
+  image: /assets/images/lucas_girard.jpg
+  bio: Lucas Girard is a Ph.D. candidate at CREST under the supervision of Xavier D’Haultfoeuille and a Teaching Fellow at ENSAE Paris. His research interest is in the field of econometrics. He develops and applies measures for segregation/polarization and investigates the construction of non-asymptomatic confidence intervals.
+  website: https://faculty.crest.fr/lgirard/
+  
 - name: Guillaume Hollard
   image: /assets/images/guillaume_hollard.jpg
   bio: Guillaume Hollard is a Senior Researcher at CNRS, Professor of Economics at École Polytechnique, where he also serves as the Vice President of the Economics department.  
@@ -35,7 +40,7 @@
   
 - name: Gianluca Manzo
   image: /assets/images/gianluca_manzo.jpg
-  bio: Gianluca Manzo is Professor of Sociology at Sorbonne University. His research is of theoretical and empirical nature. The former revolves around meta-theoretical reflections on sociological theorization, the latter with a broad range of topics such as educational inequalities, relative deprivation, status hierarchies, and, more recently, innovation diffusion and migration dynamics.
+  bio: Gianluca Manzo is Professor of Sociology at Sorbonne University. His research is of theoretical and empirical nature. The former revolves around meta-theoretical reflections on sociological theorization, the latter is concerned with a broad range of topics such as educational inequalities, relative deprivation, status hierarchies, and, more recently, innovation diffusion and migration dynamics.
   website: https://www.gemass.fr/manzo/
   
 - name: Ivaylo Petev
