--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -25,7 +25,7 @@
   
 - name: Lucas Girard
   image: /assets/images/lucas_girard.jpg
-  bio: Lucas Girard is a Ph.D. candidate at CREST under the supervision of Xavier D’Haultfoeuille and a Teaching Fellow at ENSAE Paris. His research interest is in the field of econometrics. He develops and applies measures for segregation/polarization and investigates the construction of non-asymptomatic confidence intervals.
+  bio: Lucas Girard has recently acquired his Ph.D. in Economics at CREST and is a Teaching Fellow at ENSAE Paris. His research interest is in the field of econometrics. He develops and applies measures for segregation/polarization and investigates the construction of non-asymptomatic confidence intervals.
   website: https://faculty.crest.fr/lgirard/
   
 - name: Guillaume Hollard
