--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -65,7 +65,7 @@
 - date: 2022-06-28
   name: Data Analysis
   events:
-    - name: "09:30 - 12:00 Polarization (Lucas Girard)"
+    - name: "09:30 - 12:00 Measuring Ideological Segregation from Text (Lucas Girard)"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
