--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -18,9 +18,9 @@
   bio: David Garcia is Full Professor for Computational Behavioral and Social Sciences at TU Graz. His research analyzes human behavior through digital traces and deals with topics such as emotions, polarization, inequality, and privacy. 
   website: https://dgarcia.eu
 
-- name: Gloria Genaro
+- name: Gloria Gennaro
   image: /assets/images/gloria_genaro.jpg
-  bio: Glora Genaro is a Postdoctoral Student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
+  bio: Glora Gennaro is a Postdoctoral Student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
   website: http://gloriagennaro.rbind.io
   
 - name: Lucas Girard
