--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -6,7 +6,7 @@
     - name: "11:00 - 12:00 Getting to Know Each Other"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 14:30 Ethics in Scraping"
-    - name: "14:45 - 16:30 [Paola Tubaro](https://databigandsmall.com/): Gig Workers and Women in AI"
+    - name: "14:45 - 16:30 [Paola Tubaro](https://databigandsmall.com/): The Ethics of AI -- Micro-tasking and Micro-Workers"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Matthew Salganik](https://www.princeton.edu/~mjs3/): TBA"
     - name: "18:30 - 21:00 Welcome Dinner"
