--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -25,17 +25,17 @@
   
 - name: Lucas Girard
   image: /assets/images/lucas_girard.jpg
-  bio: Lucas Girard has recently acquired his Ph.D. in Economics at CREST and is a Teaching Fellow at ENSAE Paris. His research interest is in the field of econometrics. He develops and applies measures for segregation/polarization and investigates the construction of non-asymptomatic confidence intervals.
+  bio: Lucas Girard has recently acquired his Ph.D. in Economics at CREST and is a Lecturer at ENSAE Paris. His research interest is in the field of econometrics. He develops and applies measures for segregation/polarization and investigates the construction of non-asymptomatic confidence intervals.
   website: https://faculty.crest.fr/lgirard/
   
 - name: Guillaume Hollard
   image: /assets/images/guillaume_hollard.jpg
-  bio: Guillaume Hollard is a Senior Researcher at CNRS, Professor of Economics at École Polytechnique, where he also serves as the Vice President of the Economics department.  
+  bio: Guillaume Hollard is a Senior Researcher at CNRS and Professor of Economics at École Polytechnique, where he also serves as the Vice President of the Economics department.  
   website: https://sites.google.com/site/webpagehollard/
    
 - name: Marc Keuschnigg
   image: /assets/images/marc_keuschnigg.jpg
-  bio: Marc Keuschnigg is Professor of Sociology at Leipzig University and Associate Professor at The Institute for Analytical Sociology at Linköping University. His research deals with cultural dynamics, social norms, and spatial inequality. 
+  bio: Marc Keuschnigg is Professor of Sociology at Leipzig University and Associate Professor at Linköping University. His research deals with cultural dynamics, social norms, and spatial inequality. 
   website: https://www.keuschnigg.org
   
 - name: Gianluca Manzo
