--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -83,7 +83,7 @@
 - date: 2022-06-30
   name: Data Analysis
   events:
-    - name: "09:30 - 12:00 Marc Keuschnigg](https://www.keuschnigg.org): Experiments (tentative)"
+    - name: "09:30 - 12:00 [Marc Keuschnigg](https://www.keuschnigg.org): Experiments (tentative)"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
