--- a/_data/2022/roma-tor-vergata/faculty.yml
+++ b/_data/2022/roma-tor-vergata/faculty.yml
@@ -3,8 +3,8 @@
   bio: Gustavo Piga, Ph. D. in Economics at Columbia University, is Full Professor of Economics at the University of Rome Tor Vergata, where he chairs the International Master in Public Procurement Management and the Bachelor degree in English in Global Governance. He has chaired the Italian Procurement Agency for Goods and Services, Consip Ltd., between 2002 and 2005. He is the author of the controversial 2001 report on Derivatives in Public Debt Management. He is the editor of several books, among which the Handbook of Procurement, Cambridge University Press, with Nicola Dimitri and Giancarlo Spagnolo and Revisiting Keynes - Economic Possibilities for our Grandchildren, MIT Press, with Lorenzo Pecchi. He is the author of the recent book “L’interregno” by Hoepli on the European crisis. He is also the co-editor of the European Journal of Public Procurement Markets and member of the Scientific Committee of the Italian Parliamentary Budget Office.
   website: https://gustavopiga.eu/
 - name: Simone Borra
-  image:
-  bio:
+  image: /assets/images/borradh.jpg
+  bio: Simone Borra is associate professor of Statistics in the Economics Department of University of Rome Tor Vergata. He teaches graduate courses in Business Statistics, Business Intelligence & Data Mining, and Statistical methods for management. Simone is the coordinator of a one year post graduate Master in Customer Experience, Statistics, Machine Learning & Artificial Intelligence with the partnership of SAS Institute and Accenture. His main research interests are in Statistical methods for Machine Learning and Nonparametric methods to measure prediction error.
   website:
 - name: Laura Brandimarte
   image:
