--- a/_data/2022/odissei/location.yml
+++ b/_data/2022/odissei/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/amsterdam.jpg
 title: ODISSEI
-subtitle: Netherlands
+subtitle: Erasmus University Rotterdam, Netherlands
 description: "June 20 to July 1, 2022"
 link: odissei
 year: 2022
