--- a/_data/2022/roma-tor-vergata/hero.yml
+++ b/_data/2022/roma-tor-vergata/hero.yml
@@ -1,2 +1,2 @@
-header_2: "July 25 to August 25, 2022 | University of Rome Tor Vergata"
+header_2: "July 18 to 29, 2022 | University of Rome Tor Vergata"
 location: "SICSS-Roma Tor Vergata"
