--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -69,7 +69,7 @@
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 [Ivaylo Petev](https://www.ipetev.org): TBA"
+    - name: "17:00 - 18:30 [Ivaylo Petev](https://www.ipetev.org): The Economic Penalty of Discrimination -- Evidence from Online Platforms"
 
 - date: 2022-06-29
   name: Data Analysis
