--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -18,7 +18,7 @@
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Exercise"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 [Marie Bergström](https://www.ined.fr/en/research/researchers/Bergström+Marie): TBA"
+    - name: "17:00 - 18:30 [Marie Bergström](https://www.ined.fr/en/research/researchers/Bergström+Marie): The New Laws of Love -- Studying Online Dating with Big Data"
     
 - date: 2022-06-22
   name: Scraping Structured Formats
