--- a/_data/2022/hong-kong/location.yml
+++ b/_data/2022/hong-kong/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/hongkong.jpg
+image: /assets/images/hongkong2.jpg
 title: Hong Kong
 subtitle: Virtual Event
 description: "June 19 to June 29, 2022"
