--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -8,7 +8,7 @@
     - name: "13:30 - 14:30 Ethics in Scraping"
     - name: "14:45 - 16:30 [Paola Tubaro](https://databigandsmall.com/): The Ethics of AI -- Micro-tasking and Micro-Workers"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 [Matthew Salganik](https://www.princeton.edu/~mjs3/): TBA"
+    - name: "17:00 - 18:30 [Matthew Salganik](https://www.princeton.edu/~mjs3/): The (Un)Predictability of Life Outcomes"
     - name: "18:30 - 21:00 Welcome Dinner"
     
 - date: 2022-06-21
@@ -81,7 +81,7 @@
     - name: "17:00 - 18:30 [Elliott Ash](http://elliottash.com): TBA (tentative)"
     
 - date: 2022-06-30
-  name: Experiments
+  name: Social Experiments in a Digital World
   events:
     - name: "09:30 - 12:00 [Marc Keuschnigg](https://www.keuschnigg.org): Lecture (tentative)"
     - name: "12:00 - 13:30 Lunch Break"
