--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -1,7 +1,7 @@
 - date: 2022-06-20
   name: What are Computational Social Sciences?
   events:
-    - name: "09:30 - 10:30 [Étienne Ollion](www.ollion.cnrs.fr): Lecture"
+    - name: "09:30 - 10:30 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "10:30 - 11:00 Logistics"
     - name: "11:00 - 12:00 Getting to Know Each Other"
     - name: "12:00 - 13:30 Lunch Break"
@@ -14,36 +14,36 @@
 - date: 2022-06-21
   name: How is the Web Written and How to Collect Data on it?
   events:
-    - name: "09:30 - 12:00 [Étienne Ollion](www.ollion.cnrs.fr): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Marie Bergström](https://www.ined.fr/en/research/researchers/Bergström+Marie): The New Laws of Love -- Studying Online Dating with Big Data"
     
 - date: 2022-06-22
   name: Scraping Structured Formats
   events:
-    - name: "09:30 - 12:00 [Étienne Ollion](www.ollion.cnrs.fr): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Julia Cagé](): TBA"
     
 - date: 2022-06-23
   name: Scraping Unstructured Formats
   events:
-    - name: "09:30 - 12:00 [Étienne Ollion](www.ollion.cnrs.fr): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Gloria Gennaro](http://gloriagennaro.rbind.io): TBA (tentative)"
 
 - date: 2022-06-24
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 [Étienne Ollion](www.ollion.cnrs.fr): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:00 - 16:30 Group Exercise"
+    - name: "13:00 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Liva Ralaivola](https://pageperso.lis-lab.fr/~liva.ralaivola/doku.php): TBA (tentative)"
 
@@ -56,7 +56,7 @@
 - date: 2022-06-27
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
@@ -74,7 +74,7 @@
 - date: 2022-06-29
   name: Agent-Based Modeling
   events:
-    - name: "09:30 - 12:00 [Gianluca Manzo](https://www.gemass.fr/manzo/): Lecture"
+    - name: "09:30 - 12:00 Lecture ([Gianluca Manzo](https://www.gemass.fr/manzo/)) "
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
@@ -83,7 +83,7 @@
 - date: 2022-06-30
   name: Social Experiments in a Digital World
   events:
-    - name: "09:30 - 12:00 [Marc Keuschnigg](https://www.keuschnigg.org): Lecture (tentative)"
+    - name: "09:30 - 12:00 : Lecture (([Marc Keuschnigg](https://www.keuschnigg.org))"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
