--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -83,7 +83,7 @@
 - date: 2022-06-30
   name: Social Experiments in a Digital World
   events:
-    - name: "09:30 - 12:00 : Lecture (([Marc Keuschnigg](https://www.keuschnigg.org))"
+    - name: "09:30 - 12:00 Lecture (([Marc Keuschnigg](https://www.keuschnigg.org))"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
