--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -16,7 +16,7 @@
   events:
     - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Marie Bergström](https://www.ined.fr/en/research/researchers/Bergström+Marie): The New Laws of Love -- Studying Online Dating with Big Data"
     
@@ -25,7 +25,7 @@
   events:
     - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Julia Cagé](https://juliacage.com): TBA"
     
@@ -34,7 +34,7 @@
   events:
     - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Gloria Gennaro](http://gloriagennaro.rbind.io): TBA"
 
@@ -43,7 +43,7 @@
   events:
     - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
     - name: "12:00 - 13:30 Lunch Break"
-    - name: "13:00 - 16:30 Group Exercise ([Felix Lennert](felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
+    - name: "13:00 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 [Liva Ralaivola](https://pageperso.lis-lab.fr/~liva.ralaivola/doku.php): TBA"
 
