fixed hong kong image display

--- a/_data/2022/hong-kong/location.yml
+++ b/_data/2022/hong-kong/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/hongkong2.jpg
+image: /assets/images/hongkong2.jpeg
 title: Hong Kong
 subtitle: Virtual Event
 description: "June 20 to July 1, 2022"
