--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -32,7 +32,7 @@ guest_assistants:
 
     - name: Sven Lampe
 
-    - name: More GAs TBA
+    - name: More GAs TBC
 
 participants: 
   title: Participants
