--- a/_data/2022/aachen-graz/faculty.yml
+++ b/_data/2022/aachen-graz/faculty.yml
@@ -1,1 +1,18 @@
-- name: 
+- name: Jana Lasser
+  image: /assets/images/AachenGrazJana.png
+  bio: "I am a PostDoc at David Garcia's Computational Social Science lab at the Graz University of Technology and the Complexity Science Hub Vienna. Drawing from my experience in nonlinear dynamical systems, my current research activity centres around emergent phenomena in complex social systems. I employ methods from machine learning, data science, sociophysics to understand a diverse range of topics, from emotion dynamics to the spread of diseases and misinformation in the field of Computational Social Science."
+  website: https://janalasser.at/
+  
+- name: Ivan Smirnov
+  image: /assets/images/AachenGrazIvan.jpg
+  bio: "I am a computational social scientist working at RWTH Aachen University. After receiving a doctoral degree from HSE University in Moscow, I founded and led a computational social science research group there. We were using big data and machine learning to better understand human behavior and complex social phenomena. Our main focus was on inequality in education and the psychological well-being of students."
+  website: https://ismirnov.eu
+
+- name: David Garcia
+  image: /assets/images/AachenGrazDavid.png
+  bio: "David holds computer science degrees from Universidad Autonoma de Madrid (Spain) and ETH Zurich (Switzerland). David did a PhD and Postdoc at ETH Zurich, working at the chair of systems design. His research focuses on computational social science, designing models and analysing human behaviour through digital traces. His main work revolves around the topics of emotions, polarization, inequality, and privacy, combining statistical analyses of large datasets of online interaction with computational models. His thesis “Modeling collective emotions in online communities” provides an example of how agent-based modeling can be used to construct an integrated approach to collective emotional phenomena in cyberspace. His postdoctoral research on opinion polarization and online privacy has been funded by the Swiss National Science Foundation and the ETH Risk Centre."
+  website: https://www.unibo.it/sitoweb/marco.albertini2/en
+
+- name: Markus Strohmaier
+  image: /assets/images/AachenGrazMarkus.png
+  bio: "Markus Strohmaier leads the Chair for Data Science in the economic and social sciences at University of Mannheim (Germany). He is also the Scientific Coordinator for Digital Behavioral Data at GESIS and an External Faculty Member at the Complexity Science Hub Vienna. Previously, he was a Post-Doc at the University of Toronto (Canada), an Assistant Professor at Graz University of Technology (Austria), a visiting scientist at (XEROX) Parc (USA), a Visiting Assistant Professor at Stanford University (USA) and the founder and scientific director of the department for Computational Social Science at GESIS (Germany). He is interested in applying and developing computational techniques to research challenges on the intersection between computer science and the social sciences / humanities."
