--- a/_data/2022/ndsu/faculty.yml
+++ b/_data/2022/ndsu/faculty.yml
@@ -4,6 +4,6 @@
   website: https://www.ndsu.edu/communication/faculty/shuning_lu/
   
 - name: Zoltan P. Majdik, Ph.D.
-  bio: Zoltan P. Majdik is an Associate Professor in the Department of Communication, North Dakota State University. His research interest lies in the field of rhetoric, with a focus on computational approaches to rhetorical texts. His recent projects explore how complex matters such as climate change, medical information, polling statistics, etc. get communicated to, within, and across publics.
+  bio: Zoltan P. Majdik is an Associate Professor in the Department of Communication, North Dakota State University. His research interest lies in the field of rhetoric, with a focus on computational approaches to rhetorical texts. His recent projects explore how complex matters such as climate change are framed in policy discourse, and on how to build machine learning models for classifying complex rhetorical language-structures.
   image: /assets/images/ZoltanMajdik.jpeg
   website: https://www.ndsu.edu/communication/faculty/zoltan_p_majdik/
