--- a/_data/2022/penn/faculty.yml
+++ b/_data/2022/penn/faculty.yml
@@ -1,1 +1,19 @@
-- name: 
+- name: Xi Song 
+  image: 
+  bio: Xi Song is an Associate Professor of Sociology and an affiliate of the Population Studies Center at the University of Pennsylvania. She previously taught at the University of Chicago.
+  website: https://sociology.sas.upenn.edu/people/xi-song
+  
+  - name: Daniel Hopkins
+  image: 
+  bio: Daniel J. Hopkins, PhD is a Professor in the Department of Political Science at the University of Pennsylvania, and has a courtesy appointment at the Annenberg School for Communication.
+  website: https://ldi.upenn.edu/fellows/fellows-directory/daniel-hopkins-phd/
+  
+  - name: Hanming Fang
+  image: 
+  bio: Hanming Fang is Joseph M. Cohen Term Professor of Economics at the University of Pennsylvania. He is an applied microeconomist with broad theoretical and empirical interests focusing on public economics, including topics such as discrimination, social insurance, and welfare reform, health insurance markets, and population aging
+  website: https://web.sas.upenn.edu/hfang/
+  
+  - name: Bhuvnesh Jain
+  image: 
+  bio: Bhuvnesh Jain is a world-renowned cosmologist whose expertise in gravitational lensing—the shearing and magnification of light from distant galaxies—is forging new insights into some of the least-understood phenomena in the universe, such as dark matter, cosmic acceleration, and dark energy.
+  website: https://web.sas.upenn.edu/endowed-professors/jain/
