--- a/_data/2022/sydney/faculty.yml
+++ b/_data/2022/sydney/faculty.yml
@@ -1,6 +1,6 @@
 - name: Olga Boichak
   image: /assets/images/Boichak.jpg
-  bio: Olga Boichak is a Lecturer in Digital Cultures at the University of Sydney. She is a media sociologist with expertise in computational social science, and her research interests span networks, narratives, and cultures of activism in the digital age. Before joining the University of Sydney in 2019, Olga was a research assistant at the Center for Computational and Data Sciences (Syracuse University) and a visiting scholar at the Social Media Lab (Ryerson University, Canada), where she contributed to the development of tools and analytic techniques that support social listening, information literacy, bot detection, and decision-making in complex scenarios. 
+  bio: Olga Boichak is a Lecturer in Digital Cultures at the University of Sydney. She is a media sociologist with expertise in computational social science. Before joining the University of Sydney in 2019, Olga was a research associate at the Center for Computational and Data Sciences (Syracuse University, USA) and a visiting scholar at the Social Media Lab (Ryerson University, Canada). Together with colleagues she developed tools and analytic techniques that support social listening, information literacy, bot detection, and decision-making in complex scenarios. 
   website: http://olgarithmic.net
 
 - name: Eduardo Altmann
