--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -4,7 +4,7 @@
   website: https://e.olamijuwon.com
   
 - name: Fidelia Dake
-  bio: Fidelia Dake is a senior lecturer at the Regional Institute for Population Studies (RIPS) at the University of Ghana. Her research focuses broadly on population health and international development. Her research interests include nutrition and physical activity, obesity and non-communicable diseases, socio-environmental determinants of health, urban health, health statistics, health-financing and population ageing.
+  bio: Fidelia Dake is a Senior Lecturer at the Regional Institute for Population Studies (RIPS), University of Ghana. Her research focuses broadly on population health and international development. Her research interests include nutrition and physical activity, obesity and non-communicable diseases, socio-environmental determinants of health, urban health, health statistics, health-financing and population ageing. She is also interested in using methods in computational social science to study health and lifestyle behaviours including dietary practices, physical activity and travel behaviours.
   image: /assets/images/fidelia_sicss.png
   website: https://scholar.google.com/citations?user=uVr7QQQAAAAJ&hl=en
   
